namespaces and use bootstrapSwirch

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		}
 	},
 	"require": {
-		"webvimark/bootstrap-switch": "dev-master"
+		"webvimark/bootstrap-switch": "dev-master",
+		"webvimark/components": "dev-master"
 	}
 }
