translation and grid-page-size

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
 	"require": {
 		"webvimark/bootstrap-switch": "dev-master",
 		"webvimark/grid-bulk-actions": "dev-master",
+		"webvimark/grid-page-size": "dev-master",
 		"webvimark/components": "dev-master"
 	}
 }
